# minisys-mcc

./: .clang-tidy  .clangd  CMakeLists.txt  README.md  conanfile.py
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml
cmake/: README.md  antlr4.cmake  llvm.cmake  mcc_custom_project_options.cmake  mcc_fetch_project_options.cmake  mcc_options.cmake
conan/profiles/: linux-#-#-gcc-#-#  macos-#-#-clang-#-#
mcc/: CMakeLists.txt
mcc/include/mcc/: ir_visitor.hpp  mcc_main.hpp
mcc/src/: ir_visitor.cpp  main.cpp  mcc_main.cpp
sample/: Bread.g4  CMakeLists.txt
sample/src/: main.cpp
sample/test/: CMakeLists.txt  simple.bread
